# typeline

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  foo.html  rustfmt.toml
core/: Cargo.toml  debug_log_template.html
core/bench/: utils.rs
core/benches/: bench.rs
core/debug_log/: debug_log_template.html
core/src/: chain.rs  context.rs  document.rs  extension.rs  job.rs  job_session.rs  lib.rs  liveness_analysis.rs  repl_prompt.rs  scr_error.rs  typeline_error.rs  tyson.rs  worker_thread.rs
core/src/cli/: call_expr.rs  call_expr_iter.rs  help.rs  mod.rs
core/src/cli/help_sections/: join.txt  main.txt  print.txt  regex.txt  types.txt
core/src/debug_log/: field.hbs  group_track.hbs  head.hbs  helpers.rs  iter_list.hbs  mod.rs  script.js  stream_values.hbs  style.css  transform.hbs  transform_chain.hbs  transform_env.hbs  transform_update.hbs  update.hbs
core/src/operators/: aggregate.rs  aggregator.rs  atom.rs  call.rs  call_concurrent.rs  cast.rs  chunks.rs  count.rs  end.rs  errors.rs  explode.rs  field_value_sink.rs  file_reader.rs  flatten.rs  foreach.rs  foreach_unique.rs  fork.rs  forkcat.rs  format.rs  input_done_eater.rs  join.rs  key.rs  lines.rs  literal.rs  macro_call.rs  macro_def.rs  mod.rs  multi_op.rs  next.rs  nop.rs  nop_copy.rs  operator.rs  paste_pipeline.rs  print.rs  regex.rs  select.rs  sequence.rs  string_sink.rs  success_updater.rs  terminator.rs  (+3 more)
core/src/operators/compute/: ast.rs  binary_op.rs  binary_ops.rs  binary_ops_avx2.rs  cmp_ops.rs  (+9 more)
core/src/options/: argument.rs  chain_options.rs  chain_settings.rs  chain_spec.rs  context_builder.rs  mod.rs  operator_base_options.rs  session_options.rs  session_setup.rs  setting.rs
core/src/record_data/: action_buffer.rs  array.rs  atom_iter_abstraction.rs  bytes_insertion_stream.rs  custom_data.rs  debug_log.css  dyn_ref_iter.rs  field.rs  field_action.rs  field_action_applicator.rs  field_data.rs  field_data_ref.rs  field_value.rs  field_value_deserialize.rs  field_value_ref.rs  field_value_repr.rs  field_value_slice_iter.rs  fixed_sized_type_inserter.rs  formattable.rs  group_track.rs  group_track_manager.rs  group_tracker.rs  iter_hall.rs  iter_hall_action_applicator.rs  iters.rs  match_set.rs  mod.rs  object.rs  push_interface.rs  record_buffer.rs  record_group_tracker.rs  record_set.rs  ref_iter.rs  scope_manager.rs  single_val_or_auto_deref_iter.rs  single_value_iter.rs  spot_value.rs  stream_value.rs  typed.rs  typed_iters.rs  (+2 more)
core/src/selenium/: mod.rs
core/src/utils/: aligned_buf.rs  bit_vec_deque.rs  compare_i64_bigint.rs  counting_writer.rs  debuggable_nonmax.rs  encoding.rs  escaped_writer.rs  identity_hasher.rs  index_slice.rs  index_vec.rs  indexing_type.rs  int_string_conversions.rs  integer_sum.rs  io.rs  lazy_lock_guard.rs  max_index.rs  maybe_text.rs  mod.rs  multi_ref_mut_handout.rs  nonzero_ext.rs  offset_vec_deque.rs  phantom_slot.rs  pointer_writer.rs  printable_unicode.rs  random_access_container.rs  read_char.rs  ringbuf.rs  size_classed_vec.rs  size_classed_vec_deque.rs  slice_writer.rs  small_box.rs  stable_universe.rs  stable_vec.rs  string_store.rs  temp_vec.rs  test_utils.rs  text_write.rs  type_list.rs  universe.rs
core/tests/: basic.rs  custom_types.rs  fork.rs  forkcat.rs  join.rs  lib.rs  regex.rs  utils.rs
core/tests/integration/: basic.rs  callcc.rs  format.rs  mod.rs  objects.rs  regex.rs
crates/core/: Cargo.toml
crates/core/src/: chain.rs  context.rs  job.rs  lib.rs  liveness_analysis.rs  typeline_error.rs  tyson.rs
crates/csv/: Cargo.toml
crates/csv/src/: csv.rs  lib.rs
crates/indexland/: Cargo.toml  README.md  README.tpl
crates/indexland/derive/: Cargo.toml  README.md  README.tpl
crates/indexland/src/: counted_stable_universe.rs  counted_universe.rs  enumerated_index_iter.rs  get_many_mut.rs  idx.rs  idx_enumerate.rs  idx_range.rs  index_array.rs  index_array_vec.rs  index_hash_map.rs  index_hash_set.rs  index_slice.rs  index_small_vec.rs  index_vec.rs  index_vec_deque.rs  indexing_type.rs  lib.rs  multi_ref_mut_handout.rs  nonmax.rs  offset_vec_deque.rs  phantom_slot.rs  random_access_container.rs  stable_universe.rs  stable_vec.rs  temp_vec.rs  universe.rs  universe_multi_ref_mut_handout.rs
crates/indexland/tests/: mod.rs
crates/indexland_utils/: Cargo.toml
crates/indexland_utils/src/: counted_stable_universe.rs  counted_universe.rs  lib.rs  multi_ref_mut_handout.rs  nonmax.rs  random_access_container.rs  stable_vec.rs  temp_vec.rs  universe.rs  universe_multi_ref_mut_handout.rs
crates/json/: Cargo.toml
crates/json/src/: json_visitor.rs  jsonl.rs  lib.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs  py.rs
crates/python/tests/: mod.rs
crates/selenium/: Cargo.toml
crates/selenium/src/: lib.rs  sel.rs  sel_nav.rs  selenium_data.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: avg.rs  chunks.rs  dup.rs  exec.rs  explode.rs  filter.rs  flatten.rs  from_tyson.rs  head.rs  join.rs  lib.rs  lines.rs  max.rs  sequence.rs  sum.rs  tail.rs  typename.rs
extensions/csv/: Cargo.toml
extensions/csv/src/: csv.rs  lib.rs
extensions/http/: Cargo.toml
extensions/http/src/: http.rs  lib.rs  tls_client.rs  url.rs
extensions/http/tests/: basic.rs  mod.rs  tls.rs
extensions/misc_cmds/: Cargo.toml
extensions/misc_cmds/src/: any_number.rs  from_tyson.rs  head.rs  lib.rs  primes.rs  sum.rs  tail.rs
extensions/misc_cmds/tests/: mod.rs
extensions/python/: Cargo.toml
extensions/python/src/: lib.rs  py.rs
extensions/python/tests/: mod.rs
extensions/selenium/: Cargo.toml
extensions/selenium/src/: lib.rs  sel.rs  sel_nav.rs  sel_xpath.rs  selenium_data.rs
extensions/sqlite/: Cargo.toml
extensions/sqlite/src/: lib.rs
extensions/utils/: Cargo.toml
extensions/utils/src/: avg.rs  chunks.rs  collect.rs  count.rs  dup.rs  eliminate_errors.rs  exec.rs  explode.rs  filter.rs  flatten.rs  from_tyson.rs  head.rs  join.rs  lib.rs  lines.rs  max.rs  primes.rs  shell.rs  string_utils.rs  sum.rs  tail.rs  typename.rs
extensions/utils/tests/: mod.rs
(+400 files in other folders)
