[workspace]
members = [
    "core",
    "extensions/sqlite",
    "extensions/http",
    "extensions/utils",
    "extensions/python",
]

[package]
name = "scr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

license = "MIT"
repository = "https://github.com/cmrschwarz/scr"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]
description = "High performance pipeline processor"

[lib]
name = "scr"
# tests are all in scr_core, no need to bloat the output of `cargo test --all`
test = false
doctest = false
path = "src/lib.rs" # the default, workaround https://github.com/webern/cargo-readme/issues/32

[[bin]]
name = "scr"
test = false
path = "src/main.rs" # the default, workaround https://github.com/webern/cargo-readme/issues/32

[dev-dependencies]
rstest = "0.21.0"
regex = "1.10"
scr_ext_utils = { path = "./extensions/utils" }
# TODO: remove once we have proper fraction parsing
scr_ext_python = { path = "./extensions/python" }

[dependencies]
once_cell = "1.19.0"
ref-cast = "1.0.23"

scr_core = { path = "./core", default-features = false }

scr_ext_sqlite = { path = "./extensions/sqlite", optional = true }
scr_ext_python = { path = "./extensions/python", optional = true }
scr_ext_http = { path = "./extensions/http", optional = true }
scr_ext_utils = { path = "./extensions/utils", optional = true }

[profile.release]
panic = "abort"
lto = "thin"

[profile.dev]
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true

[features]
repl = ["scr_core/repl"]
debug_log = ["scr_core/debug_log"]

utils = ["dep:scr_ext_utils"]
http = ["dep:scr_ext_http"]
python = ["dep:scr_ext_python"]
sqlite = ["dep:scr_ext_sqlite"]
all_exts = ["utils", "http", "python", "sqlite"]

full = ["all_exts", "repl", "debug_log"]
default = ["utils"]

[package.metadata.deb]
features = ["full"]
license-file = ["LICENSE", "4"]
extended-description = "High performance pipeline processor."
section = "utility"
priority = "optional"
assets = [["target/release/scr", "usr/bin/", "755"]]
