[workspace]
members = [
    "core",
    "extensions/sqlite",
    "extensions/http",
    "extensions/utils",
    "extensions/python",
    "extensions/csv",
]

[package]
name = "scr"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

license = "MIT"
repository = "https://github.com/cmrschwarz/scr"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]
description = "High performance pipeline processor"

autobenches = false

[lib]
name = "scr"
# tests are all in scr_core, no need to bloat the output of `cargo test --all`
test = false
doctest = false
path = "src/lib.rs" # the default, workaround https://github.com/webern/cargo-readme/issues/32

[[bin]]
name = "scr"
test = false
path = "src/main.rs" # the default, workaround https://github.com/webern/cargo-readme/issues/32

[[test]]
name = "bench_test"
path = "benches/bench_test.rs"


[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[dev-dependencies]
rstest = "0.23.0"
regex = "1.11"
scr_ext_utils = { path = "./extensions/utils" }
# TODO: remove once we have proper fraction parsing
scr_ext_python = { path = "./extensions/python" }
criterion = "0.5.1"
criterion-macro = "0.4.0"
paste = "1.0.15"
macro_rules_attribute = "0.2.0"
inventory = "0.3.15"

[dependencies]
ref-cast = "1.0.23"

scr_core = { path = "./core", default-features = false }

scr_ext_sqlite = { path = "./extensions/sqlite", optional = true }
scr_ext_python = { path = "./extensions/python", optional = true }
scr_ext_http = { path = "./extensions/http", optional = true }
scr_ext_utils = { path = "./extensions/utils", optional = true }
scr_ext_csv = { path = "./extensions/csv", optional = true }

[profile.release]
panic = "abort"
lto = "fat"

[profile.dev]
panic = "unwind"
debug = true

[profile.bench]
inherits = "release"
debug = true
lto = "off"

[features]
repl = ["scr_core/repl"]
debug_log = ["scr_core/debug_log"]

utils = ["dep:scr_ext_utils"]
http = ["dep:scr_ext_http"]
python = ["dep:scr_ext_python"]
sqlite = ["dep:scr_ext_sqlite"]
csv = ["dep:scr_ext_csv"]
all_exts = ["utils", "http", "python", "sqlite", "csv"]

full = ["all_exts", "repl", "debug_log"]
default = ["utils", "csv"]

slow_tests = ["scr_ext_utils?/slow_tests"]
bench = []


[package.metadata.deb]
features = ["full"]
license-file = ["LICENSE", "4"]
extended-description = "High performance pipeline processor."
section = "utility"
priority = "optional"
assets = [["target/release/scr", "usr/bin/", "755"]]
