[package]
name = "scr_core"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

license = "MIT"
repository = "https://github.com/cmrschwarz/scrr/tree/main/core"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]

[lib]
name = "scr_core"


[dependencies]

# essentially just for MappedMutexGuard. can be removed once that becomes stable
parking_lot = "0.12.3"

# utils
bstr = { version = "1.9.1", features = ["alloc"], default-features = false }
once_cell = "1.19.0"
memchr = "2.7.4"
static_assertions = "1.1.0"
thiserror = "1.0.61"
derive_more = "0.99.18"
ref-cast = "1.0.23"
subenum = "1.1.2"
metamatch = "0.2.4"


# small size / layout optimizations
arrayvec = "0.7.4"
bitvec = { version = "1.0", features = ["std"], default-features = false }
#nonmax = "0.5.5"
smallstr = { version = "0.3.0", features = ["union"] }
smallvec = { version = "1.13.2", features = ["union", "write"] }
thin-vec = "0.2.13"
indexmap = "2.2.6"
bitbybit = "1.3.2"

# features for core operators / types
num = "0.4.3"

encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
regex = "1.10.5"
regex-syntax = "0.8.4"
unicode-ident = "1.0.12"

# for debug_log
serde_derive = { version = "1.0.203", optional = true }
serde_json = { version = "1.0.120", optional = true }
handlebars = { version = "6.0.0", features = [
    "string_helpers",
], optional = true }

# deps for repl mode:
[dependencies.reedline]
version = "0.33.0"
features = ["bashisms"]
default-features = false
optional = true

[dependencies.shlex]
version = "1.3.0"
default-features = false
optional = true


[dev-dependencies]
rstest = "0.21.0"

[features]
default = []

repl = ["dep:shlex", "dep:reedline"]

unstable = []
debug_state = []

debug_disable_terminator = []

debug_log = ["debug_state", "handlebars", "serde_json", "serde_derive"]
debug_log_extern_style_sheet = ["debug_log"]
debug_log_lenient = ["debug_log"]
debug_log_no_apply = ["debug_log"]

debug_logging = ["debug_state"]
debug_logging_transform_update = ["debug_logging"]
debug_logging_liveness_analysis = ["debug_logging"]
debug_logging_setup = ["debug_logging"]
debug_logging_streams = ["debug_logging"]
debug_logging_cow_fields = ["debug_logging"]
debug_logging_output_fields = ["debug_logging"]
debug_logging_field_actions = ["debug_logging"]
debug_logging_field_action_groups = ["debug_logging"]
debug_logging_iter_states = [
    "debug_logging_output_fields",
    "debug_logging_field_actions",
]
debug_logging_field_action_group_accel = ["debug_logging"]

debug_logging_full = [
    "debug_logging_transform_update",
    "debug_logging_liveness_analysis",
    "debug_logging_setup",
    "debug_logging_streams",
    "debug_logging_cow_fields",
    "debug_logging_output_fields",
    "debug_logging_field_actions",
    "debug_logging_field_action_groups",
    "debug_logging_iter_states",
    "debug_logging_field_action_group_accel",
]
