[package]
name = "typeline_ext_csv"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "csv parsing and serialization for typeline"

[lib]
name = "typeline_ext_csv"
test = false
doctest = false

[dependencies]
typeline_core = { version = "0.1", path = "../core" }

lexical-core = "1.0.2"
memchr = "2.7.4"

[dev-dependencies]
typeline_ext_utils = { version = "0.1", path = "../utils" }

rstest = "0.24.0"
