[package]
name = "indexland"

version = "0.1.0"
license = "MIT"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["index", "collection", "container", "vec", "slice"]

description = "collections based on newtype indices"

[lib]
name = "indexland"

[dependencies]
arrayvec = { version = "0.7.6", optional = true, default-features = false }
smallvec = { version = "1.14.0", optional = true, default-features = false }


[features]
default = ["arrayvec", "multi_ref_mut_handout"]

smallvec = ["dep:smallvec"]
arrayvec = ["dep:arrayvec"]
multi_ref_mut_handout = ["dep:arrayvec"]

disable_debuggable_nonmax = []
