[package]
name = "indexland"

version = "0.1.0"
license = "MIT"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["index", "collection", "container", "vec", "slice"]

description = "collections based on newtype indices"

[lib]
name = "indexland"

[dependencies]
arrayvec = { version = "0.7.6", optional = true, default-features = false }
smallvec = { version = "1.14.0", optional = true, default-features = false, features = [
    "const_new",
] }
serde = { version = "1.0.218", optional = true, default-features = false }
indexland_derive = { path = "./derive", optional = true, default-features = false }

[dev-dependencies]
indexland = { path = ".", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }

[features]
default = ["arrayvec", "multi_ref_mut_handout"]

derive = ["dep:indexland_derive"]

serde = ["dep:serde", "arrayvec/serde", "smallvec/serde"]

smallvec = ["dep:smallvec"]
arrayvec = ["dep:arrayvec"]
multi_ref_mut_handout = ["dep:arrayvec"]

disable_debuggable_nonmax = []
