[package]
name = "indexland_utils"

version = "0.1.0"
license = "MIT"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["index", "collection", "container", "vec", "slice"]

description = "collections based on newtype indices"

[lib]
name = "indexland_utils"

[dependencies]
indexland = { workspace = true }
arrayvec = { version = "0.7.6", default-features = false }

serde = { version = "1.0.218", optional = true, default-features = false }


[dev-dependencies]
derive_more = { version = "2.0.1", features = ["full"] }

[features]
