[package]
name = "typeline_ext_json"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "csv parsing and serialization for typeline"

[lib]
name = "typeline_ext_json"
test = false
doctest = false

[dependencies]
typeline_core = { workspace = true, features = [ "serde" ] }
indexland = { workspace = true }
indexland_utils = { workspace = true }

serde = "1.0.217"
serde_json = "1.0.135"
sonic-rs = "0.3.17"
lexical-core = "1.0.2"
memchr = "2.7.4"
indexmap = "2.7.0"
num-bigint = "0.4.6"
num = "0.4.3"

[dev-dependencies]
typeline_ext_utils = { workspace = true }
rstest = { workspace = true }
