[package]
name = "typeline_ext_python"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "python integration for typeline"

[lib]
name = "typeline_ext_python"
test = false
doctest = false

[dependencies]
typeline_core = { version = "0.1", path = "../core" }

pyo3 = { version = "0.23.1", features = ["num-bigint"] }
num = "0.4.3"

[dev-dependencies]
typeline_ext_utils = { version = "0.1", path = "../utils" }

rstest = "0.24.0"
