[package]
name = "typeline_ext_selenium"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "selenium integration for typeline"

[lib]
name = "typeline_ext_selenium"
test = false
doctest = false

[dependencies]
typeline_core = { workspace = true }


thirtyfour = "0.35.0"
# geckodriver = "0.35.0"
tokio = "1.42.0"
derive_more = "2.0.1"
reqwest= "0.12.12"
rust-ini = "0.21.1"
dirs-next = "2.0.0"
zip = "2.2.2"
indexmap = "2.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"

[dev-dependencies]
rstest = { workspace = true }
