[package]
name = "typeline_ext_sqlite"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "sqlite integration for typeline"

[lib]
name = "typeline_ext_sqlite"
test = false
doctest = false

[dependencies]
typeline_core = { version = "0.1", path = "../core" }
