[package]
name = "scr_ext_csv"
version = "0.1.0"

edition = "2021"
rust-version = "1.80"

license = "MIT"
repository = "https://github.com/cmrschwarz/scrr/tree/main/extensions/csv"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]

[lib]
name = "scr_ext_csv"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
memchr = "2.7.4"

[dev-dependencies]
scr_ext_utils = { path = "../utils" }
