[package]
name = "scr_ext_http"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

license = "MIT"
repository = "https://github.com/cmrschwarz/scrr/tree/main/extensions/http"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]

[lib]
name = "scr_ext_http"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
rustls = { version = "0.23.10", features = ["logging", "ring"] }
rustls-pemfile = "2.1.2"
mio = { version = "1.0.0", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
webpki-roots = "0.26"
thiserror = "1.0.61"
bstr = "1.9.1"
memchr = "2.7.4"
url = "2.5.2"
once_cell = "1.19.0"
regex = "1.10.5"
derive_more = "0.99.18"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
hyper = { version = "1.4.0" }
mockito = "1.4.0"
reqwest = { version = "0.12.5" }
hyper-tls = "0.6.0"
http = "1.1.0"
hyper-util = { version = "0.1.6", default-features = false, features = [
    "server-auto",
] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26.0", default-features = false }
futures = "0.3.30"


[features]
debug_log_http = []
