[package]
name = "typeline_ext_http"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "http(s) tooling for typeline"

[lib]
name = "typeline_ext_http"
test = false
doctest = false

[dependencies]
typeline_core = { path = "../../core" }
rustls = { version = "0.23.17", features = ["logging", "ring"] }
rustls-pemfile = "2.2.0"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
webpki-roots = "0.26.6"
thiserror = "2.0.3"
bstr = "1.11.0"
memchr = "2.7.4"
url = "2.5.3"
once_cell = "1.20.2"
regex = "1.11.1"
derive_more = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
hyper = { version = "1.5.0" }
mockito = "1.6.1"
reqwest = { version = "0.12.9" }
hyper-tls = "0.6.0"
http = "1.1.0"
hyper-util = { version = "0.1.10", default-features = false, features = [
    "server-auto",
] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26.0", default-features = false }
futures = "0.3.31"


[features]
debug_log_http = []
