[package]
name = "scr_ext_misc_cmds"
version = "0.1.0"
edition = "2021"

[lib]
name = "scr_ext_misc_cmds"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
bstr = { version = "1.8.0", default-features = false }
primes = "0.3.0"

[dev-dependencies]
scr = { path = "../../", features = ["misc_cmds"] }
