[package]
name = "scr_ext_python"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

license = "MIT"
repository = "https://github.com/cmrschwarz/scrr/tree/main/extensions/python"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]

[lib]
name = "scr_ext_python"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
num = "0.4.3"
pyo3 = { version = "0.22.0", features = ["num-bigint", "gil-refs"] }

[dev-dependencies]
scr_ext_utils = { path = "../utils" }
rstest = "0.23.0"
