[package]
name = "scr_ext_python"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "scr_ext_python"
test = false
doctest = false

[dependencies]
pyo3 = { version = "0.23.1", features = ["num-bigint"] }
scr_core = { path = "../../core" }
num = "0.4.3"

[dev-dependencies]
scr_ext_utils = { path = "../utils" }
rstest = "0.23.0"
