[package]
name = "typeline_ext_python"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "python integration for typeline"

[lib]
name = "typeline_ext_python"
test = false
doctest = false

[dependencies]
pyo3 = { version = "0.23.1", features = ["num-bigint"] }
typeline_core = { path = "../../core" }
num = "0.4.3"

[dev-dependencies]
typeline_ext_utils = { path = "../utils" }
rstest = "0.23.0"
