[package]
name = "scr_ext_sqlite"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

license = "MIT"
repository = "https://github.com/cmrschwarz/scrr/tree/main/extensions/sqlite"
authors = ["Christian Schwarz <cmrs@cmrs.io>"]

[lib]
name = "scr_ext_sqlite"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
