[package]
name = "scr_ext_sqlite"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "scr_ext_sqlite"
test = false
doctest = false

[dependencies]
scr_core = { path = "../../core" }
