[package]
name = "typeline_ext_utils"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

description = "utility operators for typeline"

[lib]
name = "typeline_ext_utils"
test = false
doctest = false


[dependencies]
typeline_core = { version = "0.1", path = "../../core" }

bstr = { version = "1.11.0", features = ["std"], default-features = false }
primes = "0.4.0"
num = "0.4.3"
indexmap = "2.6.0"
metamatch = "0.2.4"
mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
num-order = { version = "1.2", features = ["num-rational", "num-bigint"] }

[dev-dependencies]
typeline = { version = "0.1", path = "../../", features = ["utils"] }

rstest = "0.24.0"

[features]
slow_tests = []
